--- a/package.json
+++ b/package.json
@@ -1,40 +1,51 @@
 {
-  "name": "ds-dev",
-  "version": "0.1.1",
+  "name": "orwell-cli",
+  "version": "0.4.0",
   "description": "DS description",
   "license": "MIT",
-  "author": { "name": "Anton Stefanov", "email": "anton.stefanov@live.com" },
+  "author": {
+    "name": "Anton Stefanov",
+    "email": "anton.stefanov@live.com"
+  },
   "esy": {
     "build": "refmterr dune build --profile=release",
     "NOTE": "Optional release Section. Customizes result of `esy release`",
     "install": [
-      "esy-installer bin.install", "esy-installer ds.install",
+      "esy-installer orwell.install",
+      "esy-installer ds.install",
       "esy-installer tests.install"
     ],
-    "buildEnv": { "ODOC_SYNTAX": "re" }
+    "buildEnv": {
+      "ODOC_SYNTAX": "re"
+    },
+    "release": {
+      "bin": [
+        "orwell"
+      ]
+    }
   },
   "scripts": {
-    "start": "esy x bin",
+    "start": "esy x orwell",
     "test": "esy x bash -cx ./scripts/test-dev.cmd",
     "test-ci": "esy x bash -cx ./scripts/test-ci.cmd",
     "example": "esy x example-basic",
     "example-lwt": "esy x example-lwt",
     "doc": "esy dune build @doc",
-    "opendoc":
-      "esy open '#{self.target_dir}/default/_doc/_html/ds/Ds/index.html'"
+    "opendoc": "esy open '#{self.target_dir}/default/_doc/_html/ds/Ds/index.html'"
   },
-  "repository": "https://github.com/antonstefanov/ds",
-  "homepage": "https://github.com/antonstefanov/ds",
-  "bugs": "https://github.com/antonstefanov/ds/issues",
+  "repository": "https://github.com/antonstefanov/orwell",
+  "homepage": "https://github.com/antonstefanov/orwell",
+  "bugs": "https://github.com/antonstefanov/orwell/issues",
   "dependencies": {
     "@opam/dune": "^1.10.0",
     "@opam/lwt": "4.3.0",
     "@opam/lwt_ppx": "1.2.3",
     "@reason-native/console": "*",
-    "@reason-native/pastel": "*",
+    "@reason-native/pastel": "0.2.1",
     "@esy-ocaml/reason": ">= 3.4.0 < 3.6.0",
     "refmterr": "*",
-    "ocaml": "~4.8.1000"
+    "ocaml": "~4.8.1000",
+    "rarg": "^0.6.1"
   },
   "devDependencies": {
     "@opam/merlin": "*",
