--- a/src/seed/dune
+++ b/src/seed/dune
@@ -1,5 +1,6 @@
 (library
-  (name Seed)
+  (name DsSeed)
   (public_name ds.seed)
-  (libraries  pastel.lib)
+  (libraries lwt lwt.unix pastel.lib console.lib)
+  (preprocess (pps lwt_ppx))
   )
