--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,10 +8,10 @@ trigger:
   - feature-*
 
 jobs:
-  - template: .ci/build-platform.yml
-    parameters:
-      platform: Linux
-      vmImage: ubuntu-16.04
+  # - template: .ci/build-platform.yml
+  #   parameters:
+  #     platform: Linux
+  #     vmImage: ubuntu-16.04
 
   - template: .ci/build-platform.yml
     parameters:
@@ -22,10 +22,10 @@ jobs:
   # which assumes you have bsdtar (tar.exe) in your system
   # otherwise it will end up using the esy-bash tar which doesn't
   # understand drives like D:/ (thinks it's an scp path).
-  - template: .ci/build-platform.yml
-    parameters:
-      platform: Windows
-      vmImage: windows-2019
+  # - template: .ci/build-platform.yml
+  #   parameters:
+  #     platform: Windows
+  #     vmImage: windows-2019
 
   # This job is kept here as we want to have the platform names in the same file
   - job: Release
